--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -1,4 +1,4 @@
-Source: nvidia-kernel
+Source: nvidia-kernel#LEGACY#
 Section: non-free/kernel
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
@@ -7,9 +7,9 @@ Build-Depends: debhelper (>= 7.2.3~), quilt (>= 0.46-7~)
 Standards-Version: 3.8.4
 Homepage: http://www.nvidia.com/
 
-Package: nvidia-kernel-#KVERS#
+Package: nvidia-kernel#LEGACY#-#KVERS#
 Architecture: i386 amd64
-Provides: nvidia-kernel-#VERSION#
+Provides: nvidia-kernel#LEGACY#-#VERSION#
 Depends: nvidia-kernel-common
 Recommends: linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
