--- a/debian/nvidia-glx-ia32.shlibs.in
+++ b/debian/nvidia-glx-ia32.shlibs.in
@@ -1,3 +1,3 @@
 libGL 1 ia32-libs (>= 20090804)
-libGLcore 1 nvidia-glx-ia32
-libnvidia-tls 1 nvidia-glx-ia32
+libGLcore	1 nvidia-glx#LEGACY#-ia32
+libnvidia-tls	1 nvidia-glx#LEGACY#-ia32
