--- a/debian/nvidia-glx.init.in
+++ b/debian/nvidia-glx.init.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 ### BEGIN INIT INFO
-# Provides:          nvidia-glx
+# Provides:          nvidia-glx#LEGACY#
 # Required-Start:    $remote_fs
 # Required-Stop:     $remote_fs
 # Default-Start:     2 3 4 5
@@ -33,7 +33,7 @@ case "$1" in
     if [ -L /usr/lib/nvidia/libGL.so.xlibmesa ] && [ -d /usr/share/doc/libgl1-mesa-dev ] ; then
     	ln -s /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so
     fi
-    if [ -d /usr/share/doc/nvidia-glx-dev ] ; then
+    if [ -d /usr/share/doc/nvidia-glx#LEGACY#-dev ] ; then
         ln -s /usr/lib/libGL.so.#VERSION# /usr/lib/libGL.so
     fi
     ;;
