--- a/debian/nvidia-glx.shlibs.in
+++ b/debian/nvidia-glx.shlibs.in
@@ -1,5 +1,5 @@
 libGL     1 libgl1-mesa-glx | libgl1
-libGLcore 1 nvidia-glx
-libXvMCNVIDIA_dynamic 1 nvidia-glx
-libnvidia-tls 1 nvidia-glx
-libnvidia-cfg	1 nvidia-glx
+libGLcore		1 nvidia-glx#LEGACY#
+libXvMCNVIDIA_dynamic	1 nvidia-glx#LEGACY#
+libnvidia-tls		1 nvidia-glx#LEGACY#
+libnvidia-cfg		1 nvidia-glx#LEGACY#
