--- a/debian/nvidia-kernel-source.README.Debian.in
+++ b/debian/nvidia-kernel-source.README.Debian.in
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers for Debian
+nvidia-graphics-drivers#LEGACY# for Debian
 ----------------------------------
 
 
@@ -17,8 +17,8 @@ KERNEL MODULE INSTRUCTIONS:
   * Easiest and recommended method.
   * DKMS will take care of building a new module whenever the driver
     or your kernel is updated.
-  * Install the package nvidia-kernel-dkms instead of
-    nvidia-kernel-source.
+  * Install the package nvidia-kernel#LEGACY#-dkms instead of
+    nvidia-kernel#LEGACY#-source.
   * STOP reading this file.
 
  METHOD #2: manually, using module-assistant
@@ -27,7 +27,7 @@ KERNEL MODULE INSTRUCTIONS:
     corresponding linux-headers-KVERS package.
   * Run this command every time your kernel or the driver was updated:
         
-        module-assistant auto-install nvidia
+        module-assistant auto-install nvidia#LEGACY#
 
   * For more information on module-assistant, see its man page and package
     documentation.
@@ -67,10 +67,10 @@ METHOD #3 Using a linux-headers or kernel-headers package
 
 As root (or using fakeroot)
 1. cd /usr/src 
-   tar xjvf nvidia-kernel.tar.bz2 -C <YOUR BUILD LOCATION>
+   tar xjvf nvidia-kernel#LEGACY#.tar.bz2 -C <YOUR BUILD LOCATION>
    (It will install in <YOUR BUILD LOCATION>/modules) 
    - or -
-   tar xjvf nvidia-kernel.tar.bz2  (if building in /usr/src) 
+   tar xjvf nvidia-kernel#LEGACY#.tar.bz2  (if building in /usr/src) 
 
    The standard build location is /usr/src
 
@@ -91,7 +91,7 @@ As root (or using fakeroot)
 
 5. Then build nvidia-kernel package:
 
-   cd <YOUR BUILD LOCATION>/modules/nvidia-kernel
+   cd <YOUR BUILD LOCATION>/modules/nvidia-kernel#LEGACY#
    debian/rules binary_modules
 
 (You can also combine step 4 and 5 into one line:
@@ -105,7 +105,7 @@ deployed:
 
 7. Install the nvidia-kernel package:
 
-   dpkg -i ../nvidia-kernel-2.6.14-2-k7_#VERSION#-1+_.Custom_i386.deb
+   dpkg -i ../nvidia-kernel#LEGACY#-2.6.14-2-k7_#VERSION#-1+_.Custom_i386.deb
    ( or similar filename )
 
 Now see GENERAL NOTES below method #4
@@ -113,15 +113,15 @@ Now see GENERAL NOTES below method #4
 METHOD #4: Using your own kernel source headers
 ***********************************************************************
 
-To build the nvidia-kernel deb you need to first make sure you have
+To build the nvidia-kernel#LEGACY# deb you need to first make sure you have
 kernel-package installed, then do the following:
 
 As root
 1. cd /usr/src
-   tar xjvf nvidia-kernel.tar.bz2 -C <YOUR BUILD LOCATION>
+   tar xjvf nvidia-kernel#LEGACY#.tar.bz2 -C <YOUR BUILD LOCATION>
    (It will install in <YOUR BUILD LOCATION>/modules) 
    - or -
-   tar xjvf nvidia-kernel.tar.bz2  (if building in /usr/src) 
+   tar xjvf nvidia-kernel#LEGACY#.tar.bz2  (if building in /usr/src) 
 
 2. If you are NOT using the default modules location /usr/src/modules
    then you must set an environment variable that points to your modules
@@ -145,7 +145,7 @@ installed:
 5. Install the nvidia-kernel package:
 
      cd <YOUR BUILD LOCATION>    (e.g. /usr/src)
-     dpkg -i nvidia-kernel-KVER*.deb
+     dpkg -i nvidia-kernel#LEGACY#-KVER*.deb
 
 Notes for method #2: 
 
@@ -165,13 +165,14 @@ video. You can do this with:
         adduser username video
 
 Also note for AGP issues and further information please see the NVIDIA
-README file (README.gz) in the nvidia-glx package 
+README file (README.gz) in the nvidia-glx#LEGACY# package 
 
 An old nvidia.ko might be already loaded (run 'lsmod' to check) so 
 do 'rmmod nvidia' to remove the module from memory.
 
 
-For any news on this package check http://bugs.debian.org/nvidia-kernel-source
+For any news on this package check
+http://bugs.debian.org/nvidia-kernel#LEGACY#-source
 
 
  -- Randall Donald <rdonald@debian.org>, Fri, 30 Apr 2004 19:02:04 -0700
