--- a/debian/rules
+++ b/debian/rules
@@ -158,6 +158,8 @@ override_dh_strip:
 	-e 's{#LEGACY#}{$(legacy)}g;' \
 	-e 's{#URL_X86#}{$(url_x86)}g;' \
 	-e 's{#URL_X86_64#}{$(url_x86_64)}g;' \
+	-e 's{#!i386#}{$(if $(filter i386,$(DEB_BUILD_ARCH)),#)}g;' \
+	-e 's{#!amd64#}{$(if $(filter amd64,$(DEB_BUILD_ARCH)),#)}g;' \
 	< $< > $@
 
 debian/module/debian/changelog: debian/changelog
