update/conditionalize lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@922 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-libcuda1: shlib-with-non-pic-code
-libcuda1: shlib-without-PT_GNU_STACK-section
+#!amd64#libcuda1: shlib-with-non-pic-code
+#!amd64#libcuda1: shlib-without-PT_GNU_STACK-section
 libcuda1: unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
