--- a/debian/nvidia-kernel-dkms.lintian-overrides.in
+++ b/debian/nvidia-kernel-dkms.lintian-overrides.in
@@ -1,5 +1,5 @@
 # This is the upstream binary module, which we're not allowed (by the
 # NVIDIA license) to change in any way.  Both architectures are included
 # so that (on i386) we can build the kernel module for the amd64 kernel.
-nvidia-kernel#LEGACY#-dkms: binary-from-other-architecture
+#!amd64#nvidia-kernel#LEGACY#-dkms: binary-from-other-architecture
 nvidia-kernel#LEGACY#-dkms: unstripped-binary-or-object
