--- a/debian/control
+++ b/debian/control
@@ -93,8 +93,10 @@ Conflicts:
  binutils-gold (>> 2.20.51),
 Description: NVIDIA binary kernel module DKMS source
  This package builds the NVIDIA Xorg binary kernel module needed by
- nvidia-glx, using DKMS.  The kernel module will be built for your running
- kernel and automatically rebuilt for any new kernels that are installed.
+ nvidia-glx, using DKMS.  Provided that you have the kernel header
+ packages installed, the kernel module will be built for your running
+ kernel and automatically rebuilt for any new kernel headers that are
+ installed.
  .
  The NVIDIA binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server for graphics cards
