--- a/debian/bug-control.in
+++ b/debian/bug-control.in
@@ -1,3 +1,3 @@
 report-with: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source
 
-package-status: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source nvidia-kernel-common xserver-xorg xserver-xorg-core binutils binutils-gold
+package-status: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source nvidia-kernel-common xserver-xorg xserver-xorg-core binutils binutils-gold linux-headers-2.6
