do not abuse the variable V which can be used to set verboseness
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@943 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/Makefile
+++ b/debian/module/Makefile
@@ -49,11 +49,11 @@ ifdef RUNNING_REL
 
 BOOTVERSION_PREFIX = /boot/vmlinuz.
 
-V := $(shell if [ -f $(BOOTVERSION_PREFIX)version.h ]; then \
+VV := $(shell if [ -f $(BOOTVERSION_PREFIX)version.h ]; then \
 	grep UTS_RELEASE $(BOOTVERSION_PREFIX)version.h | \
 	cut -d' ' -f3; fi)
 
-ifeq ($(V),"$(RUNNING_REL)")
+ifeq ($(VV),"$(RUNNING_REL)")
 HEADERFROMBOOT := 1
 GETCONFIG := MAKEFILES=$(shell /bin/pwd)/.config
 HAVECONFIG := y
