add Conflicts: ccache (<< 3.0~) (closes: #582748)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@954 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -91,6 +91,7 @@ Conflicts:
  nvidia-kernel-legacy-96xx-dkms,
  nvidia-kernel-legacy-173xx-dkms,
  binutils-gold (>> 2.20.51),
+ ccache (<< 3.0~),
 Description: NVIDIA binary kernel module DKMS source
  This package builds the NVIDIA Xorg binary kernel module needed by
  nvidia-glx, using DKMS.  Provided that you have the kernel header
@@ -115,6 +116,7 @@ Recommends: module-assistant | kernel-package,
  nvidia-glx (>= ${nvidia:Version}), nvidia-kernel-common
 Conflicts:
  binutils-gold (>> 2.20.51),
+ ccache (<< 3.0~),
 Description: NVIDIA binary kernel module source
  This package provides the source for the NVIDIA Xorg binary kernel module
  needed by nvidia-glx in a form suitable for use by module-assistant or
