* nvidia-glx: add Pre-Depends: dpkg (>= 1.15.7.2)   * nvidia-glx: switch to dpkg-maintscript-helper for removal of obsolete     config file /etc/default/nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@965 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Homepage: http://www.nvidia.com
 
 Package: nvidia-glx
 Architecture: i386 amd64
+Pre-Depends: dpkg (>= 1.15.7.2)
 Depends: nvidia-kernel-${nvidia:Version}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-vdpau-driver (>= ${nvidia:Version})
 Suggests: nvidia-settings,
