nvidia-glx: work around dpkg-divert bug #581544: useless errors on not writable destination if source does not exist
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@966 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.postrm.in
+++ b/debian/nvidia-glx.postrm.in
@@ -54,6 +54,11 @@ case "$1" in
 
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.xlibmesa /usr/lib/libGL.so.1 > /dev/null
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libGL.so.1.2.xlibmesa /usr/lib/libGL.so.1.2 > /dev/null
+
+	# work around dpkg-divert bug #581544: useless errors on not writable destination if source does not exist
+	if [ -d /usr/lib/nvidia ] && [ ! -d /usr/lib/xorg/modules/extensions ]; then
+	    mkdir -p /usr/lib/xorg/modules/extensions
+	fi
 	
 	dpkg-divert --remove --rename --package nvidia-glx --divert /usr/lib/nvidia/libglx.so.xlibmesa /usr/lib/xorg/modules/extensions/libglx.so > /dev/null
 
@@ -62,6 +67,9 @@ case "$1" in
 	if [ -d /usr/lib/nvidia ]; then
 		rmdir /usr/lib/nvidia/ || true;
 	fi
+
+	# work around dpkg-divert bug #581544: useless errors on not writable destination if source does not exist
+	rmdir /usr/lib/xorg/modules/extensions /usr/lib/xorg/modules /usr/lib/xorg 2>/dev/null || true
 
     ;;
 
