update get-orig-source: target for upcoming upstream renames
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@971 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -189,9 +189,10 @@ get-orig-source:
 	mkdir get-orig-source
 	uscan --no-symlink --download-current-version --pasv \
 	    --destdir get-orig-source
+	test `ls get-orig-source/* | wc -l` = 2  # we need exactly 2 downloaded files
 	@set -e -x ; \
 	    cd get-orig-source ; \
-	    newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)-.*/\1/') ; \
+	    newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)\(-.*\)\?\.run/\1/') ; \
 	    mkdir nvidia-graphics-drivers-$${newversion}.orig ; \
 	    mv *.run nvidia-graphics-drivers-$${newversion}.orig/ ; \
 	    chmod 0755 nvidia-graphics-drivers-$${newversion}.orig/* ; \
