* nvidia-glx{,-ia32}: ship (possibly dangling) /usr/lib{,32}/libGL.so     symlink pointing to the diverted libGL.so.1.2 from libgl1-mesa-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@977 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -20,3 +20,8 @@ nvidia-glx#LEGACY#: shlibs-declares-dependency-on-other-package libgl1-mesa-glx 
 
 # Referenced by upstream documentation.
 nvidia-glx#LEGACY#: script-with-language-extension usr/bin/nvidia-bug-report.sh
+
+# We diverted the original /usr/lib/libGL.so symlink.
+# In order to retain its functionality (i.e. pointing the MESA libGL.so.1)
+# we ship a link pointing to the diverted library.
+nvidia-glx#LEGACY#: non-dev-pkg-with-shlib-symlink
