--- a/debian/nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/nvidia-glx-ia32.lintian-overrides.in
@@ -16,5 +16,7 @@ nvidia-glx#LEGACY#-ia32: package-contains-empty-directory usr/lib32/nvidia/
 # the free version for Debian's purposes.
 nvidia-glx#LEGACY#-ia32: shlibs-declares-dependency-on-other-package ia32-libs*
 
-# A single symbolic link does not justify the creation of a new package.
+# We diverted the original /usr/lib32/libGL.so symlink.
+# In order to retain its functionality (i.e. pointing the MESA libGL.so.1)
+# we ship a link pointing to the diverted library.
 nvidia-glx#LEGACY#-ia32: non-dev-pkg-with-shlib-symlink
