* nvidia-glx-dev: install headers into /usr/include/nvidia/GL and depend on     libgl1-mesa-dev | libgl-dev instead of conflicting with it     (closes: #278256, #370542, #552388)   * compiling OpenGL applications will use the MESA implementation by default,     to explicitly compile with the NVIDIA headers use -I/usr/include/nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@980 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -68,13 +68,12 @@ Description: NVIDIA binary driver 32bit libs
 
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (= ${binary:Version}), libx11-dev, ${misc:Depends}
-Provides: libgl-dev
-Conflicts: libgl-dev, mesa-common-dev,
+Depends: ${misc:Depends}, nvidia-glx (= ${binary:Version}),
+ libx11-dev, libgl1-mesa-dev | libgl-dev
+Conflicts:
  nvidia-glx-legacy-71xx,
  nvidia-glx-legacy-96xx,
  nvidia-glx-legacy-173xx,
-Replaces: libgl-dev
 Description: NVIDIA binary Xorg driver development files
  This package contains the NVIDIA binary Xorg driver
  development files.
