remove the now function-less /etc/init.d/nvidia-glx script
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@981 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.postrm.in
+++ b/debian/nvidia-glx.postrm.in
@@ -21,6 +21,7 @@ set -e
 
 # <target: squeeze>
 dpkg-maintscript-helper rm_conffile /etc/default/nvidia-glx 195.36.24-1~ -- "$@"
+dpkg-maintscript-helper rm_conffile /etc/init.d/nvidia-glx 195.36.24-2 -- "$@"
 # </target: squeeze>
 
 
