nvidia-glx-dev: rewrite description and only recommend libgl1-mesa-dev
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@988 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -69,14 +69,20 @@ Description: NVIDIA binary driver 32bit libs
 Package: nvidia-glx-dev
 Architecture: i386 amd64
 Depends: ${misc:Depends}, nvidia-glx (= ${binary:Version}),
- libx11-dev, libgl1-mesa-dev | libgl-dev
+ libx11-dev,
+Recommends: libgl1-mesa-dev | libgl-dev
 Conflicts:
  nvidia-glx-legacy-71xx,
  nvidia-glx-legacy-96xx,
  nvidia-glx-legacy-173xx,
 Description: NVIDIA binary Xorg driver development files
- This package contains the NVIDIA binary Xorg driver
- development files.
+ This package contains the development files for the NVIDIA OpenGL
+ implementation. This package is only needed for applications that use some
+ extensions available in the NVIDIA driver only. Include and library search
+ paths have to be adjusted to explicitly select this implementation.
+ .
+ For building portable OpenGL applications, please install libgl1-mesa-dev
+ instead.
  .
  For more information on this source package visit NVIDIA's homepage
  at http://www.nvidia.com/ .
