nvidia-glx: add Conflicts: fglrx-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@989 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Conflicts:
  nvidia-glx-legacy-71xx,
  nvidia-glx-legacy-96xx,
  nvidia-glx-legacy-173xx,
+ fglrx-glx,
 Description: NVIDIA binary Xorg driver
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
